[project]
name = "experiments"
version = "0.1.0"
description = ""
authors = [
    { name = "C4 Patino", email = "cpatino2@huskers.unl.edu" }
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"

requires-python = "^3.12.0"
dependencies = [
    "neptune (>=1.13.0,<2.0.0)"
]

[tool.poetry.group.oasys.dependencies]
free-range-zoo = { path = "free-range-zoo", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-complexity = 25

[tool.yapf]
COLUMN_LIMIT = 130
